Replace Base64 decoder by java.util.Base64 (#39)